# MBO-LOB-reconstructor

./: .gitignore  ARCHITECTURE.md  BACKBONE_AUDIT_VALIDATED_2026_04.md  CHANGELOG.md  CODEBASE.md  Cargo.toml  FOUNDATION_INTEGRITY_PLAN_2026_05.md  README.md  RESEARCH_GAPS.md  WARNINGS.md
.github/workflows/: ci.yml
benches/: reconstruction.rs
configs/: nvda_full_export.toml
examples/: advanced_analytics.rs  basic_usage.rs  multi_symbol.rs  process_nvda_single_day.rs
src/: analytics.rs  constants.rs  dbn_bridge.rs  error.rs  hotstore.rs  lib.rs  loader.rs  source.rs  statistics.rs  types.rs  warnings.rs
src/export/: batch.rs  lob_writer.rs  mbo_writer.rs  mod.rs  schema.rs
src/loader/: error.rs  mod.rs
src/lob/: day_boundary.rs  mod.rs  multi_symbol.rs  order_lifecycle.rs  price_level.rs  queue_position.rs  reconstructor.rs  trade_aggregator.rs
tests/: export_test.rs  integration_test.rs  loader_typed_iterator.rs  lob_stats_counters.rs  queue_position_nvidia_test.rs
