[package]
name = "mbo-lob-reconstructor"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["nagarx"]
description = "High-performance MBO → LOB reconstruction and analytics for deep learning preprocessing"
documentation = "https://docs.rs/mbo-lob-reconstructor"
repository = "https://github.com/nagarx/MBO-LOB-reconstructor"
homepage = "https://github.com/nagarx/MBO-LOB-reconstructor"
license = "LicenseRef-Proprietary"
readme = "README.md"
keywords = ["lob", "orderbook", "mbo", "hft", "machine-learning"]
categories = ["finance", "data-structures", "science"]
exclude = ["data/", "tests/integration_test.rs"]

[lib]
name = "mbo_lob_reconstructor"
path = "src/lib.rs"

[features]
default = ["databento"]
databento = ["dbn", "zstd"]

[dependencies]
# DBN decoding (optional, enabled by default)
dbn = { git = "https://github.com/databento/dbn.git", tag = "v0.20.0", optional = true }
zstd = { version = "0.13", optional = true }

# Core data structures
ahash = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"
indexmap = "2.12.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "reconstruction"
harness = false

# Example that requires databento feature
[[example]]
name = "process_nvda_single_day"
required-features = ["databento"]

# CLI tool for decompressing to hot store
[[bin]]
name = "decompress_to_hot_store"
path = "src/bin/decompress_to_hot_store.rs"
required-features = ["databento"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
lto = "thin"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

