[package]
name = "mbo-lob-reconstructor"
version = "0.2.0"
edition = "2021"
rust-version = "1.82"
authors = ["nagarx"]
description = "High-performance MBO → LOB reconstruction and analytics for deep learning preprocessing"
documentation = "https://docs.rs/mbo-lob-reconstructor"
repository = "https://github.com/nagarx/MBO-LOB-reconstructor"
homepage = "https://github.com/nagarx/MBO-LOB-reconstructor"
license = "LicenseRef-Proprietary"
readme = "README.md"
keywords = ["lob", "orderbook", "mbo", "hft", "machine-learning"]
categories = ["finance", "data-structures", "science"]
exclude = ["data/", "tests/integration_test.rs"]

[lib]
name = "mbo_lob_reconstructor"
path = "src/lib.rs"

[features]
default = ["databento", "legacy-iterator-api"]
databento = ["dbn", "zstd"]
export = ["dep:arrow", "dep:parquet", "dep:toml"]
# Phase M M.A.3 (REV 3): legacy `Iterator<Item = MboMessage>` API.
# Default-ON for transition; `iter_messages_typed()` is the new preferred API
# (`Iterator<Item = Result<MboMessage, BoundaryError>>`).
# Removable in next MAJOR release (0.3.0). Calendar removal: 2026-10-29.
legacy-iterator-api = ["databento"]

[dependencies]
# DBN decoding (optional, enabled by default)
dbn = { git = "https://github.com/databento/dbn.git", tag = "v0.20.0", optional = true }
zstd = { version = "0.13", optional = true }

# Parquet/Arrow export (optional, requires `export` feature)
arrow = { version = "55", optional = true, default-features = false }
parquet = { version = "55", optional = true, default-features = false, features = ["arrow", "snap", "zstd"] }

# TOML config parsing (optional, for export CLI)
toml = { version = "0.8", optional = true }

# Core data structures
ahash = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"
indexmap = "2.12.1"

[dev-dependencies]
criterion = "0.5"
arrow = { version = "55", default-features = false }
parquet = { version = "55", default-features = false, features = ["arrow", "snap"] }

[[bench]]
name = "reconstruction"
harness = false

# Example that requires databento feature
[[example]]
name = "process_nvda_single_day"
required-features = ["databento"]

# CLI tool for decompressing to hot store
[[bin]]
name = "decompress_to_hot_store"
path = "src/bin/decompress_to_hot_store.rs"
required-features = ["databento"]

# CLI tool for exporting LOB snapshots to Parquet
[[bin]]
name = "export_to_parquet"
path = "src/bin/export_to_parquet.rs"
required-features = ["databento", "export"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
lto = "thin"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

